[package]
name = "docchat_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217",features = ["derive"] }
serde_json = "1.0.138"
tower = "0.5.2"
reqwest = { version = "0.12.12",features = ["json","blocking"] }
uuid = { version = "1.13.1",features = ["v4"] }
tempfile = "3.17.0"
pdf-extract = "0.9.0"
multipart = "0.18.0"
qdrant-client = "1.13.0"
anyhow = "1.0.95"
dotenv = "0.15.0"
hyper-util = { version = "0.1.16",features = ["tokio"] }
hyper = { version = "1.6.0" ,features = ["server"]}
tokio-util = { version = "0.7.15",features = ["compat"] }
bytes = "1.10.1"